Refactored Quarter creation logic